--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   <h2>Lista de Clientes</h2>
   <ul id="listaClientes"></ul>
 
-  <script src="scripts.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
